# Eris

./: LICENSE  README.md  eris.py  pyproject.toml
data/playbooks/: apt.yml  binaries.yml  env.yml  kali_base.yml
data/playbooks/kali-playbook/: apt.yml  binaries.yml  env.yml  git.yml  golang.yml  kali_base.yml  pip.yml
eris/: __init__.py  __main__.py  args.py  cli.py  config.py
eris/modules/: build_image.py
eris/tools/: dependency.py  packer.py
eris/utils/: banner.py  cmds.py  colors.py
packer/kali/: ami.auto.pkrvars.hcl  defaults.cfg  kali.pkr.hcl  variables.pkr.hcl
packer/kali-ami/: ami.auto.pkrvars.hcl  defaults.cfg  kali.pkr.hcl  variables.pkr.hcl
